--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,24 @@ description = "A cargo subcommand for bundling OS-specific applications"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.3.4", features = ["derive"] }
+toml = "0.7.4"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1.0"
+tar = "0.4"
+zip = { version = "0.6", default-features = false }
+anyhow = "1.0"
+
+[target."cfg(target_os = \"windows\")".dependencies]
+uuid = { version = "1", features = [ "v4", "v5" ] }
+bitness = "0.4"
+winreg = "0.50"
+glob = "0.3"
+
+[target."cfg(target_os = \"macos\")".dependencies]
+icns = "0.3.1"
+time = { version = "0.3", features = [ "formatting" ] }
+plist = "1"
+
+[target."cfg(target_os = \"linux\")".dependencies]
+ar = "0.9.0"
