--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ serde_json = "1.0"
 tauri-utils = { version = "1.4.0", features = [ "resources" ] }
 tauri-bundler = { version = "1.3.0" }
 anyhow = "1.0.71"
+cargo-manifest = "0.10"
